Trying to fixed overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap");
 
-/* 
-   font-family: 'Bebas Neue', cursive;
-   font-family: 'Roboto', sans-serif;
-*/
-
-img {
-  width: 100%;
+html {
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
+}
+
+img {
+  max-width: 100%;
 }
 
 h1,
